# BSides-Nova-BreakAI-Workshop-2025

./: README.md  Untitled0.ipynb  adv.ipynb  assignment1.html  docker-compose.yaml  llm.ipynb  llma.ipynb  pyproject.toml  sample.db  z.md  z.py
.github/workflows/: deploy_to_vm.yml  pages.yaml
assets/documents/: z.md
assets/webpages/: assets.html  assignment1.html  assignment2.html  display_logs.html  login.html
bsidesnova/: __init__.py  context_fetchers.py  requirements.txt  selectors.py  widgets.py
bsidesnova/bsidesnova/: database_ui.py  exfil_server.py  selectors.py  sql_utils.py  widgets.py
bsidesnova/bsidesnova/agents/: shell_executor_agent.py  sql_agent.py
bsidesnova/bsidesnova/fetchers/: webpage.py
bsidesnova/bsidesnova/llm/: ollama_client.py
bsidesnova/bsidesnova/selectors/: adversarial_selector.py
bsidesnova/bsidesnova/server/: exfil_server.py
bsidesnova/bsidesnova/ui/: __init__.py  attack_selector_ui.py  document_upload.py
docker/exfilserver/: Dockerfile
utils/: LICENSE  __init__.py  context_fetchers.py  exfil_server.py  ollama_client.py  pyproject.toml  selectors.py  sql_utils.py
utils/bsides_nova_utils/: selectors.py
