[project]
name = "bsides_nova_utils"
version = "0.0.1"
description = ""
authors = [
    { name = "Pavan Reddy", email = "pavan.reddy@gwmail.gwu.edu" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [

]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"